Removed legacy code from DataHelper